Correct for enclosing layers scroll position in parentRelativeStickyBoxOffset

The offset calculated in CompositedLayerMapping for
parent_relative_sticky_box_offset calls |convertToLayerCoords| on the
enclosing layer. This method relies on location() however which includes
the scroll offset if the enclosing layer is not already the scroll
ancestor, e.g. if you had the following layer setup:

ScrollAncestor
|
+-- IntermediateLayer
    |
    +-- StickyLayer

To correct for this, add back in the scroll offset for the case where
the enclosing layer is not the scroll ancestor.

BUG=692263
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2698843004
Cr-Commit-Position: refs/heads/master@{#454444}

Former-commit-id: e4819386ba4f91ce923c8c870927480566624001